--- a/views/about.html
+++ b/views/about.html
@@ -76,34 +76,141 @@
           <div class="project">
             <div class="row item">
               <div class="col-md-5 col-md-offset-1">
-                <iframe class="iframe" name="iframe1" frameborder="0"></iframe>
+                <img class="project-thumb" />
               </div>
               <div class="col-md-5 col-md-offset-1 intro">
-                <h2>列表组</h2>
-                <p>主要使用React.js框架搭建</p>
-                <p>可以选择类型</p>
-                <p>也可以进行时间排序</p>
-                <p>只适配移动端</p>
+                <h2>爱疯抢</h2>
+                <p>项目是爱娃塔科技有限公司的主要产品</p>
+                <p>项目在微信端、app均已上线</p>
+                <p>负责参与首页、商品详情、活动、支付、个人中心等功能模块</p>
+                <p>使用frozen.js框架 + zepto.js搭建</p>
+                <p>运用到css的流式布局、transition、transform等功能</p>
+                <p>负责将ui设计稿进行快速切图，利用ajax实现数据交互，使用弹窗、列表等基本组件有效率的开发</p>
               </div>
             </div>
             <div class="row item">
               <div class="col-md-5 col-md-offset-1">
-                <iframe class="iframe" name="iframe2" frameborder="0"></iframe>
+                <img class="project-thumb" />
               </div>
               <div class="col-md-5 col-md-offset-1 intro">
-                <h2>笔记本</h2>
-                <p>主要使用Node.js的express框架搭建</p>
-                <p>配合mongodb数据库</p>
-                <p>具有登录、注册、登出基本功能</p>
-                <p>并可以添加单个笔记</p>
-                <p>也可以对笔记进行编辑/修改</p>
-                <p>UI只适配移动端</p>
+                <h2>非常u惠</h2>
+                <p>项目是爱娃塔科技有限公司的主要产品</p>
+                <p>项目在微信端、app均已上线</p>
+                <p>负责参与首页、商品详情、活动、支付、个人中心等功能模块</p>
+                <p>使用frozen.js框架 + zepto.js搭建</p>
+                <p>运用到css的流式布局、transition、transform等功能</p>
+                <p>负责将ui设计稿进行快速切图，利用ajax实现数据交互，使用弹窗、列表等基本组件有效率的开发</p>
+              </div>
+            </div>
+            <div class="row item">
+              <div class="col-md-5 col-md-offset-1">
+                <img class="project-thumb" />
+              </div>
+              <div class="col-md-5 col-md-offset-1 intro">
+                <h2>茂业欢乐GO</h2>
+                <p>负责主题页面切图</p>
+                <p>使用frozen.js框架 + zepto.js搭建</p>
+                <p>对列表进行组件式封装</p>
+              </div>
+            </div>
+            <div class="row item">
+              <div class="col-md-5 col-md-offset-1">
+                <img class="project-thumb" />
+              </div>
+              <div class="col-md-5 col-md-offset-1 intro">
+                <h2>消费赠</h2>
+                <p>负责页面切图</p>
+                <p>使用frozen.js框架 + zepto.js搭建</p>
+                <p>利用ajax装载二维码和读取详情</p>
+              </div>
+            </div>
+            <div class="row item">
+              <div class="col-md-5 col-md-offset-1">
+                <img class="project-thumb" />
+              </div>
+              <div class="col-md-5 col-md-offset-1 intro">
+                <h2>拉新注册</h2>
+                <p>负责页面切图</p>
+                <p>编写验证码倒计时</p>
+                <p>活动说明弹出层</p>
+                <p>使用frozen.js框架 + zepto.js搭建</p>
               </div>
             </div>
           </div>
           <span class="glyphicon glyphicon-chevron-left shank left"></span>
           <span class="glyphicon glyphicon-chevron-right shank right"></span>
         </div>
+      </div>
+    </div>
+
+    <div class="skill">
+      <div class="container">
+        <div class="skill-header">
+          <h2>精通前端开发所需的基本知识</h2>
+          <p>也在不断学习新型技术</p>
+        </div>
+        <div class="selection" data-switch="false" data-el="false">
+          <span class="option" data-option="option1" data-target="#skill1">jQuery</span>
+          <span class="option" data-option="option2" data-target="#skill2">CSS</span>
+          <span class="option" data-option="option3" data-target="#skill3">HTML</span>
+          <span class="option" data-option="option4" data-target="#skill4">Bootstrap</span>
+          <span class="option" data-option="option5" data-target="#skill5">Node.js</span>
+          <span class="option" data-option="option6" data-target="#skill6">React.js</span>
+        </div>
+        <div class="wrapper" id="wrapper">
+          <div class="item" id="skill1">
+            <ul class="list-group item-body">
+              <li class="list-group-item">4年的使用经验</li>
+              <li class="list-group-item">编写过弹出窗、轮播等插件</li>
+              <li class="list-group-item">精通DOM操作</li>
+              <li class="list-group-item">熟练使用AJAX</li>
+              <li class="list-group-item">对闭包、原型等概念有很深的理解，以及丰富的应用经验</li>
+            </ul>
+          </div>
+          <div class="item" id="skill2">
+            <ul class="list-group item-body">
+              <li class="list-group-item">4年的使用经验</li>
+              <li class="list-group-item">熟练使用盒子模型和流模型，快速切图</li>
+              <li class="list-group-item">css3的转换(translate、scale、rotate)，过渡(transition)，动画(animation)，都有丰富的使用经验</li>
+              <li class="list-group-item">了解less等高效的动态css语言</li>
+            </ul>
+          </div>
+          <div class="item" id="skill3">
+            <ul class="list-group item-body">
+              <li class="list-group-item">4年的使用经验</li>
+              <li class="list-group-item">熟悉html的常用标签，并有丰富的使用经验</li>
+              <li class="list-group-item">有画布(canvas)的使用经验</li>
+              <li class="list-group-item">了解H5的视频、音频标签</li>
+              <li class="list-group-item">了解web储存(localStorage、sessionStorage)</li>
+            </ul>
+          </div>
+          <div class="item" id="skill4">
+            <ul class="list-group item-body">
+              <li class="list-group-item">1年多的项目使用经验</li>
+              <li class="list-group-item">熟悉框架的布局和基本组件</li>
+              <li class="list-group-item">熟练使用框架的插件</li>
+            </ul>
+          </div>
+          <div class="item" id="skill5">
+            <ul class="list-group item-body">
+              <li class="list-group-item">接触1年</li>
+              <li class="list-group-item">做了一个“笔记”的小型网站(目前有登录、注册、添加笔记、编辑笔记的功能)</li>
+              <li class="list-group-item">当前的个人网站项目也是用node.js实现的</li>
+              <li class="list-group-item">熟悉使用express来搭建项目</li>
+              <li class="list-group-item">了解异步操作和同步操作</li>
+            </ul>
+          </div>
+          <div class="item" id="skill6">
+            <ul class="list-group item-body">
+              <li class="list-group-item">做了一个列表(按分类筛选、时间排序功能)组件</li>
+              <li class="list-group-item">熟悉jsx</li>
+              <li class="list-group-item">了解组件的生命周期(getDefaultProps、getInitialState、render、componentDidMount等)</li>
+              <li class="list-group-item">了解数据流(prop、state)</li>
+              <li class="list-group-item">了解事件处理</li>
+            </ul>
+          </div>
+        </div>
+        
       </div>
     </div>
 
@@ -145,6 +252,7 @@
     <script src="build/common/js/bootstrap.min.js"></script>
     <script src="build/js/xingtian.personal.js"></script>
     <script src="build/js/xingtian.carousel.js"></script>
+    <script src="build/js/xingtian.skill.js"></script>
     <script>
       
       $(function() {
@@ -158,7 +266,7 @@
             '"就职中"'
           ]
         });
-        
+
         projectCarousel();
 
       });
@@ -168,7 +276,7 @@
        *    @current          当前
        *    projectAddsrc      执行添加src
       **/
-      var source = ["http://localhost:8000/list","http://localhost:9000/"];
+      var source = ["build/img/01.png","build/img/02.png","build/img/03.png","build/img/04.png","build/img/05.png"];
       var current = 0;
       function projectCarousel() {
         
@@ -182,7 +290,7 @@
             current = 0;
           }
 
-          if(!$('.iframe').eq(current).attr('src')) {
+          if(!$('.project-thumb').eq(current).attr('src')) {
               projectAddsrc();
           }
         });
@@ -193,14 +301,14 @@
             current = source.length - 1;
           }
 
-          if(!$('.iframe').eq(current).attr('src')) {
+          if(!$('.project-thumb').eq(current).attr('src')) {
               projectAddsrc();
           }
         });
       }
 
       function projectAddsrc() {
-        $('.iframe').eq(current).attr('src', source[current]);
+        $('.project-thumb').eq(current).attr('src', source[current]);
       }
 
     </script>
