add account module

--- a/views/about.html
+++ b/views/about.html
@@ -248,6 +248,97 @@
       </div>
     </div>
 
+    <div class="account">
+      <div class="container">
+        <div class="row dialog">
+          <div class="col-md-12 dialog-left">
+            <img src="build/img/portrait-1.jpg" class="img-circle">
+            <div class="popover right">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>你的专业不是计算机，那是怎么想到去做前端开发的呢？</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-right">
+            <img src="build/img/portrait-2.jpg" class="img-circle">
+            <div class="popover left">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>我在高中时期就接触到网页设计了。</p>
+                <p>那时候看到的一个案例是：在dreamweaver里随便写几行代码，就可以出来一个很漂亮的页面。觉得很新奇，开始上网查资料和买书自学。</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-left">
+            <img src="build/img/portrait-1.jpg" class="img-circle">
+            <div class="popover right">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>你除了自学，有没有其他的学习经历？</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-right">
+            <img src="build/img/portrait-2.jpg" class="img-circle">
+            <div class="popover left">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>在12年，我刚毕业的那年，在广州中山大学，参加了一个为期3个月的简短培训。</p>
+                <p>学习的技术：dreamweaver基本操作和简单的标签认识，以及仿门户网站制作的实操。学习ps，设计导航栏、新闻栏目等。使用flash制作动画。</p>
+                <p>最后是介绍asp和php的基础知识。</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-left">
+            <img src="build/img/portrait-1.jpg" class="img-circle">
+            <div class="popover right">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>你工作了4年，但是也换了很多份工作，为什么呢？</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-right">
+            <img src="build/img/portrait-2.jpg" class="img-circle">
+            <div class="popover left">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>因为是自学出身的，所以在基础上比别人少了许多优势。</p>
+                <p>所以一开始就希望能进入到很好的团队去锻炼。</p>
+                <p>但是事已愿为：在广州这种满大街都是大学生的城市里，你想要突出，就必须要有拔尖的优势。前期的找工作遇到了很多阻碍，最后去了一家只有一个设计、一个前端、一个后台、一个产品策划的公司，而我就是那一个前端。</p>
+                <p>创业公司风险高，做了很短时间就离开了公司。在找寻了很久之后，终于找到有成熟团队，稳定框架的公司。</p>
+                <p>但是我被分配到广告组，主要负责制作简单图片广告和文案，只有不多的页面开发任务。</p>
+                <p>在深思熟虑和哥哥的推荐之后，觉得深圳机会多，而且有更多的学习机会，就从广州离职来到了深圳。</p>
+                <p>在深圳锻炼了2年，虽然吸收了很多的工作经验和技术，但是在团队开发这方面还是比较缺失的，很希望能在团队开发中学习。</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-left">
+            <img src="build/img/portrait-1.jpg" class="img-circle">
+            <div class="popover right">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>评价你自身有哪些优势？</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12 dialog-right">
+            <img src="build/img/portrait-2.jpg" class="img-circle">
+            <div class="popover left">
+              <div class="arrow"></div>
+              <div class="popover-content">
+                <p>更懂得知识的积累和获取：有自学的经历，知道如果想要成长，必须要有足够的知识积累，在积累足够时取其精华、去其糟粕，才能更快的成长。</p>
+                <p>有丰富的切图经验：在之前公司最多的任务就是将设计稿做切图开发，曾经有过，在一个半星期将整个网络商城的所有页面切图完成的经历。</p>
+                <p>精通jQuery框架的使用：4年的使用经验。</p>
+                <p>熟悉css兼容浏览器的编写：pc端ie6\7\8及以上的兼容。移动端的css3技术也十分熟悉：流式布局、动画效果。</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="build/common/js/jquery.min.js"></script>
     <script src="build/common/js/bootstrap.min.js"></script>
     <script src="build/js/xingtian.personal.js"></script>
