--- a/views/about.html
+++ b/views/about.html
@@ -75,10 +75,10 @@
         <div class="project-wrapper">
           <div class="project">
             <div class="row item">
-              <div class="col-md-5 col-md-offset-1">
+              <div class="col-md-5 col-xs-5 col-md-offset-1">
                 <img class="project-thumb" />
               </div>
-              <div class="col-md-5 col-md-offset-1 intro">
+              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
                 <h2>爱疯抢</h2>
                 <p>项目是爱娃塔科技有限公司的主要产品</p>
                 <p>项目在微信端、app均已上线</p>
@@ -89,10 +89,10 @@
               </div>
             </div>
             <div class="row item">
-              <div class="col-md-5 col-md-offset-1">
+              <div class="col-md-5 col-xs-5 col-md-offset-1">
                 <img class="project-thumb" />
               </div>
-              <div class="col-md-5 col-md-offset-1 intro">
+              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
                 <h2>非常u惠</h2>
                 <p>项目是爱娃塔科技有限公司的主要产品</p>
                 <p>项目在微信端、app均已上线</p>
@@ -103,10 +103,10 @@
               </div>
             </div>
             <div class="row item">
-              <div class="col-md-5 col-md-offset-1">
+              <div class="col-md-5 col-xs-5 col-md-offset-1">
                 <img class="project-thumb" />
               </div>
-              <div class="col-md-5 col-md-offset-1 intro">
+              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
                 <h2>茂业欢乐GO</h2>
                 <p>负责主题页面切图</p>
                 <p>使用frozen.js框架 + zepto.js搭建</p>
@@ -114,10 +114,10 @@
               </div>
             </div>
             <div class="row item">
-              <div class="col-md-5 col-md-offset-1">
+              <div class="col-md-5 col-xs-5 col-md-offset-1">
                 <img class="project-thumb" />
               </div>
-              <div class="col-md-5 col-md-offset-1 intro">
+              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
                 <h2>消费赠</h2>
                 <p>负责页面切图</p>
                 <p>使用frozen.js框架 + zepto.js搭建</p>
@@ -125,10 +125,10 @@
               </div>
             </div>
             <div class="row item">
-              <div class="col-md-5 col-md-offset-1">
+              <div class="col-md-5 col-xs-5 col-md-offset-1">
                 <img class="project-thumb" />
               </div>
-              <div class="col-md-5 col-md-offset-1 intro">
+              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
                 <h2>拉新注册</h2>
                 <p>负责页面切图</p>
                 <p>编写验证码倒计时</p>
@@ -251,6 +251,12 @@
     <div class="account">
       <div class="container">
         <div class="row dialog">
+          <div class="col-md-12">
+            <div class="page-header">
+              <h2>讨论组(2)</h2>
+              <span class="glyphicon glyphicon-user"></span>
+            </div>
+          </div>
           <div class="col-md-12 dialog-left">
             <img src="build/img/portrait-1.jpg" class="img-circle">
             <div class="popover right">
