--- a/views/index.html
+++ b/views/index.html
@@ -4,12 +4,42 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Xing Tian</title>
+    <title>XingTian - about</title>
     <link href="build/common/css/bootstrap.min.css" rel="stylesheet">
+    <link href="build/css/about.css" rel="stylesheet">
   </head>
   <body>
+  
+    <header>
+      <div class="filter"></div>
+      <div class="navbar-wrapper">
+        <div class="container">
+          <nav class="navbar navbar-static-top">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">
+                <span aria-hidden="true" class="glyphicon glyphicon glyphicon-fire"></span>
+                XingTian
+              </a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="/">首页</a></li>
+                <li class="active"><a href="/about">关于</a></li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </header>
 
     <script src="build/common/js/jquery.min.js"></script>
     <script src="build/common/js/bootstrap.min.js"></script>
+
   </body>
 </html>
