--- a/views/about.html
+++ b/views/about.html
@@ -29,8 +29,8 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="/">首页</a></li>
-                <li class="active"><a href="/about">关于</a></li>
+                <li class="active"><a href="/">首页</a></li>
+                <!-- <li class="active"><a href="/about">关于</a></li> -->
               </ul>
             </div>
           </nav>
