chang about page

--- a/views/about.html
+++ b/views/about.html
@@ -68,77 +68,205 @@
     </header>
 
     <div class="sample">
-      <div class="container">
-        <div class="page-header">
-          <h1>作品集</h1>
-        </div>
-        <div class="project-wrapper">
-          <div class="project">
-            <div class="row item">
-              <div class="col-md-5 col-xs-5 col-md-offset-1">
-                <img class="project-thumb" />
-              </div>
-              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
-                <h2>爱疯抢</h2>
-                <p>项目是爱娃塔科技有限公司的主要产品</p>
-                <p>项目在微信端、app均已上线</p>
-                <p>负责参与首页、商品详情、活动、支付、个人中心等功能模块</p>
-                <p>使用frozen.js框架 + zepto.js搭建</p>
-                <p>运用到css的流式布局、transition、transform等功能</p>
-                <p>负责将ui设计稿进行快速切图，利用ajax实现数据交互，使用弹窗、列表等基本组件有效率的开发</p>
-              </div>
+      <div class="sample-header">
+        <h1>
+          <span class="glyphicon glyphicon-briefcase"></span>
+          这些年参与的项目
+        </h1>
+      </div>
+      <div class="sample-body">
+        <div class="sample-item">
+          <div class="page-header">
+            <h2>广州市海的投资有限公司 <small>前端开发工程师</small></h2>
+            <div class="sample-info">
+              <p class="lead">在这家公司主要是负责切图。因为是刚开始工作，很多任务都是第一次接触，所以在交互效果和表单验证这两个模块的锻炼为以后工作打下了很好的基础。</p>
+              <p class="lead">这段时间最大的收获就是对基本样式的熟练掌握了，整个项目下来，经过不断的重复，了解到熟悉，最后能一眼看到设计稿就准确分析出布局架构出来。</p>
             </div>
-            <div class="row item">
-              <div class="col-md-5 col-xs-5 col-md-offset-1">
-                <img class="project-thumb" />
+          </div>
+          <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="heading1-1">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion1" href="#collapse1-1" aria-expanded="true" aria-controls="collapse1-1">
+                    海批网络商城
+                  </a>
+                </h4>
               </div>
-              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
-                <h2>非常u惠</h2>
-                <p>项目是爱娃塔科技有限公司的主要产品</p>
-                <p>项目在微信端、app均已上线</p>
-                <p>负责参与首页、商品详情、活动、支付、个人中心等功能模块</p>
-                <p>使用frozen.js框架 + zepto.js搭建</p>
-                <p>运用到css的流式布局、transition、transform等功能</p>
-                <p>负责将ui设计稿进行快速切图，利用ajax实现数据交互，使用弹窗、列表等基本组件有效率的开发</p>
-              </div>
-            </div>
-            <div class="row item">
-              <div class="col-md-5 col-xs-5 col-md-offset-1">
-                <img class="project-thumb" />
-              </div>
-              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
-                <h2>茂业欢乐GO</h2>
-                <p>负责主题页面切图</p>
-                <p>使用frozen.js框架 + zepto.js搭建</p>
-                <p>对列表进行组件式封装</p>
-              </div>
-            </div>
-            <div class="row item">
-              <div class="col-md-5 col-xs-5 col-md-offset-1">
-                <img class="project-thumb" />
-              </div>
-              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
-                <h2>消费赠</h2>
-                <p>负责页面切图</p>
-                <p>使用frozen.js框架 + zepto.js搭建</p>
-                <p>利用ajax装载二维码和读取详情</p>
-              </div>
-            </div>
-            <div class="row item">
-              <div class="col-md-5 col-xs-5 col-md-offset-1">
-                <img class="project-thumb" />
-              </div>
-              <div class="col-md-5 col-xs-5 col-md-offset-1 intro">
-                <h2>拉新注册</h2>
-                <p>负责页面切图</p>
-                <p>编写验证码倒计时</p>
-                <p>活动说明弹出层</p>
-                <p>使用frozen.js框架 + zepto.js搭建</p>
+              <div id="collapse1-1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1-1">
+                <div class="panel-body">
+
+                  <div id="carousel-1-1" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-1-1" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-1-1" data-slide-to="1"></li>
+                      <li data-target="#carousel-1-1" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                      <div class="item active">
+                        <img src="build/img/haipw/01.png">
+                        <div class="carousel-caption">
+                          <p>这是正式工作后的第一项任务，当时很多都不懂，就连简单的样式命名也不太了解，这些命名还是在请教后台同事的。</p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="build/img/haipw/02.png">
+                        <div class="carousel-caption">
+                          <h3>类似淘宝的商品页</h3>
+                          <p>鼠标移动到图片上可以查看大图，右侧选择参数后提交<br/>
+                          图片模块是使用网络搜索到的插件制作<br />
+                          右侧参数选择模块，则是绑定点击事件来操作dom<br />
+                          最后提交的时候，进行数据判断和处理反馈
+                          </p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="build/img/haipw/03.png">
+                        <div class="carousel-caption">
+                          <h3>表单页</h3>
+                          <p>做这块花时间是最长的，其他页面相对简单点<br />
+                              表单样式都是自定义的，兼容ie6以上<br />
+                              时间都花在验证上，<br />一是对常用规则不熟悉，花了不短时间去了解<br />
+                              因为当时对封装并不了解，不然能更有效率些
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-1-1" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-1-1" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+
+                </div>
               </div>
             </div>
           </div>
-          <span class="glyphicon glyphicon-chevron-left shank left"></span>
-          <span class="glyphicon glyphicon-chevron-right shank right"></span>
+        </div>
+        <div class="sample-item open">
+          <div class="page-header">
+            <h2>深圳市爱娃塔科技有限公司 <small>前端开发工程师</small></h2>
+            <div class="sample-info">
+              <p class="lead">在爱娃塔公司做了1年多，主要是负责移动端的前端开发</p>
+              <p class="lead">移动端：使用frozen.ui + zepto.js + ajax + html5 + css3开发</p>
+              <p class="lead">pc端：使用bootstrap + jquery.js + html5 + css3开发</p>
+            </div>
+          </div>
+          <div class="panel-group" id="accordion2" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="heading2-1">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapse2-1" aria-expanded="true" aria-controls="collapse2-1">
+                    非常U惠
+                  </a>
+                </h4>
+              </div>
+              <div id="collapse2-1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2-1">
+                <div class="panel-body">
+
+                  <div id="carousel-2-1" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-2-1" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-2-1" data-slide-to="1"></li>
+                      <li data-target="#carousel-2-1" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                      <div class="item active">
+                        <img src="build/img/fcuh/01.png">
+                        <div class="carousel-caption">
+                          <h3>非常U惠是公司的核心项目</h3>
+                          <p>使用了frozen.ui前端ui组件，zepto.js移动端的jquery框架，应用流式布局</p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="build/img/fcuh/02.png">
+                        <div class="carousel-caption">
+                          <p>移动端和pc端的切图是有很大区别的。<br />
+                            在布局上就有区分：pc端以前多用静态布局，也就是固定宽度。而bootstrap的兴起出现了自适应和响应式，后来发现移动端用后两者更好。<br />
+                            流式布局和自适应类似，但是不同的是流式布局不会改变元素的尺寸，而是自动延伸。
+                          </p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="build/img/fcuh/03.png">
+                        <div class="carousel-caption">
+                          <p>移动端由于硬件和网络的原因，在操作dom制作交互效果的时候需要做到尽量优化，以免影响体验。<br />
+                          因为页面元素少，所以在细节方面要比pc端要更加细化。<br />
+                          移动端的点击效果需要增加按压样式，让用户知道操作细节。
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-2-1" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-2-1" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="heading2-2">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion2" href="#collapse2-2" aria-expanded="false" aria-controls="collapse2-2">
+                    爱疯抢
+                  </a>
+                </h4>
+              </div>
+              <div id="collapse2-2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2-2">
+                <div class="panel-body">
+
+                  <div id="carousel-2-2" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                      <li data-target="#carousel-2-2" data-slide-to="0" class="active"></li>
+                      <li data-target="#carousel-2-2" data-slide-to="1"></li>
+                      <li data-target="#carousel-2-2" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner" role="listbox">
+                      <div class="item active">
+                        <img src="build/img/ifq/01.png">
+                        <div class="carousel-caption">
+                          <h3>爱疯抢</h3>
+                          <p>使用了frozen.ui前端ui组件，zepto.js移动端的jquery框架，应用流式布局</p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="build/img/ifq/02.png">
+                        <div class="carousel-caption">
+                          <p>这个页面做的时候有个难题：<br />
+                            请求信息数据和请求生成二维码是不同的api，而且是不知道那个更快，<br />
+                            开始讨论的是先生成二维码，再去请求信息数据，但体验不好，因为二维码生成时间过长的话，用户就要等待很长的时间。<br />
+                            最后决定两个请求同时触发，再根据状态来判断成功与否。
+                          </p>
+                        </div>
+                      </div>
+                      <div class="item">
+                        <img src="build/img/ifq/03.png">
+                        <div class="carousel-caption">
+                          <p>由于屏幕尺寸比较狭小，所以在pc端常用的表格，在移动端中应用时要特别注意。</p>
+                        </div>
+                      </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-2-2" role="button" data-slide="prev">
+                      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#carousel-2-2" role="button" data-slide="next">
+                      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -348,7 +476,6 @@
     <script src="build/common/js/jquery.min.js"></script>
     <script src="build/common/js/bootstrap.min.js"></script>
     <script src="build/js/xingtian.personal.js"></script>
-    <script src="build/js/xingtian.carousel.js"></script>
     <script src="build/js/xingtian.skill.js"></script>
     <script>
       
@@ -364,49 +491,7 @@
           ]
         });
 
-        projectCarousel();
-
       });
-
-      /***  iframe add src  
-       *    @source           资源
-       *    @current          当前
-       *    projectAddsrc      执行添加src
-      **/
-      var source = ["build/img/01.png","build/img/02.png","build/img/03.png","build/img/04.png","build/img/05.png"];
-      var current = 0;
-      function projectCarousel() {
-        
-        var project = $('.project-wrapper').xingtianCarousel();
-        projectAddsrc();
-
-        project.on('carousel.left:shown', function() {
-          if(source[current + 1]) {
-            current++;
-          } else {
-            current = 0;
-          }
-
-          if(!$('.project-thumb').eq(current).attr('src')) {
-              projectAddsrc();
-          }
-        });
-        project.on('carousel.right:shown', function() {
-          if(source[current - 1]) {
-            current--;
-          } else {
-            current = source.length - 1;
-          }
-
-          if(!$('.project-thumb').eq(current).attr('src')) {
-              projectAddsrc();
-          }
-        });
-      }
-
-      function projectAddsrc() {
-        $('.project-thumb').eq(current).attr('src', source[current]);
-      }
 
     </script>
 
